# pointbench

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
cpu/: sq_distance.cpp
cuda/: sq_distance.cu
